--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,8 +22,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".services.MainBroadcastReceiver" />
-
+        <receiver android:name=".services.MainBroadcastReceiver"/>
+        <service android:name=".services.DetailsService"/>
 
     </application>
 
