--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.filmlibrary">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.filmlibrary"
-        tools:ignore="AllowBackup">
+        android:fullBackupContent="false">
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +21,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".services.MainBroadcastReceiver"/>
-        <service android:name=".services.DetailsService"/>
+        <receiver android:name=".services.MainBroadcastReceiver" />
 
     </application>
 
