--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //logging-interceptor
+    //logging-intercepto
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
 
     //AndroidX
@@ -92,5 +92,5 @@ dependencies {
 
     //GMS
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
