--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,11 @@ android {
         def apikey = properties.getProperty("the_movies_api_key", "")
         it.buildConfigField "String", "MOVIEDB_API_KEY", apikey
     }
-
 }
 
 dependencies {
     //Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -65,8 +64,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //logging-intercepto
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
+    //logging-interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
     //AndroidX
     implementation 'androidx.core:core-ktx:1.6.0'
