--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-.idea
-.gradle/
-*.iml
-build/
+#built application files
+*.apk
+*.ap_
+# files for the dex VM
+*.dex
+# Java class files
+*.class
+# generated files
+bin/
+gen/
+# Local configuration file (sdk path, etc)
 local.properties
+# Windows thumbnail db
+Thumbs.db
+# OSX files
+.DS_Store
+# Eclipse project files
+.classpath
+.project
+# Android Studio
+.idea
+build/
+cache.properties.lock
+.idea/workspace.xml
+*.iws
+.gradle/
+**/.gradle/
